# my_fastapi_project

./: compose.yaml
first_fastapi_app/: Dockerfile  pyproject.toml
first_fastapi_app/first_fastapi_app/: consumerscript.py  main.py  settings.py
second_fastapi_app/: pyproject.toml
